Bundled themes: Prevent the arrow in "Continue reading" links from wrapping to a second line.
props DustinHartzler, dominik.schwind.
fixes #27908.
Built from https://develop.svn.wordpress.org/trunk@29771


git-svn-id: http://core.svn.wordpress.org/trunk@29543 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyeleven/style.css
+++ b/wp-content/themes/twentyeleven/style.css
@@ -768,6 +768,9 @@ a:hover {
 .entry-summary {
 	padding: 1.625em 0 0;
 }
+.entry-content .more-link {
+	white-space: nowrap;
+}
 .entry-content h1,
 .entry-content h2,
 .comment-content h1,
